--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 		<script src="//code.jquery.com/jquery.js"></script>
 		<script src="//maps.googleapis.com/maps/api/js?v=3"></script>
-		<script src="bower_components/location-extractor/src/location-extractor.js"></script>
+		<script src="bower_components/location-extractor/dist/location-extractor.min.js"></script>
 		<script>
 			$(document).ready(function() {
 				var outputOriginalText = $('#outputOriginalText');
